tests/baselines/reference/unusedTypeParameterInFunction1.errors.txt
tests/cases/compiler/unusedTypeParameterInFunction1.ts(2,13): error TS6133: 'T' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInFunction1.ts (1 errors) ====
    
    function f1<T>() {
                ~
!!! error TS6133: 'T' is declared but never used.
    
    }